# Re-Unite

./: .gitignore  README.md  sow.md
backend/: README.md  docker-compose.yml  package.json
backend/src/: index.ts  seed.ts  socket.ts
backend/src/controllers/: authController.ts  bountyController.ts  chatController.ts  citizenController.ts  policeController.ts  publicController.ts
backend/src/middlewares/: auth.ts  upload.ts
backend/src/models/: BountyTransaction.ts  CaseEvent.ts  DuplicateAlert.ts  MissingPersonRequest.ts  PoliceNote.ts  ScanResult.ts  Tip.ts  User.ts
backend/src/routes/: authRoutes.ts  bountyRoutes.ts  chatRoutes.ts  citizenRoutes.ts  policeRoutes.ts  publicRoutes.ts
backend/src/services/: chatService.ts  cloudinaryService.ts  faceEmbeddingService.ts  faceScanService.ts  groqService.ts  phonepeService.ts  whatsappService.ts
backend/src/types/: index.ts
face-recon/: headers.txt  main.py  pyproject.toml
face-recon/static/: index.html
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: AppSidebar.tsx  DashboardLayout.tsx  LocationPicker.tsx  SpeakToFill.tsx  StatusBadge.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/pages/: AuthPages.tsx  BountyResult.tsx  CaseMap.tsx  Chat.tsx  TipPage.tsx
frontend/src/pages/citizen/: MyRequests.tsx  ReportMissing.tsx
frontend/src/pages/police/: PoliceDashboard.tsx  (+1 more)
frontend/src/types/: index.ts
mock-adhaar/: README.md  aadhaar_cards.json  index.ts  package.json
