[project]
name = "news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "face-recognition>=1.3.0",
    "fastapi>=0.128.4",
    "insightface>=0.7.3",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.1",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
